@@ -90,6 +90,18 @@ recent to oldest, I've edited back to release 110.46 (2004/06/17).
 //====================================================================
 //== Recent updates
 
+//--------------------------------------------------------------------
+[2017/05/17]::
++
+Fixed a bug in the way that JSON string values were being printed.
+The code previously assumed that C-style esaping will work, but
+that is not true for "\'" (as well as for control and non-ASCII
+characters).  The new implementation assumes that the string value
+is UTF-8 and uses the "\\u" escape sequences for characters outside
+the JSON escapes and printable ASCII characters.
++
+owner:[John Reppy,http://cs.uchicago.edu/~jhr]
+
 //====================================================================
 == Version 110.81; 2017/05/01
 
